# lorica-api/src/routes.rs
@@ -19,7 +19,6 @@ pub struct RouteResponse {
     pub load_balancing: String,
     pub waf_enabled: bool,
     pub waf_mode: String,
-    pub topology_type: String,
     pub enabled: bool,
     pub force_https: bool,
     pub redirect_hostname: Option<String>,
@@ -66,7 +65,6 @@ pub struct CreateRouteRequest {
     pub backend_ids: Option<Vec<String>>,
     pub certificate_id: Option<String>,
     pub load_balancing: Option<String>,
-    pub topology_type: Option<String>,
     pub waf_enabled: Option<bool>,
     pub waf_mode: Option<String>,
     pub force_https: Option<bool>,
@@ -112,7 +110,6 @@ pub struct UpdateRouteRequest {
     pub backend_ids: Option<Vec<String>>,
     pub certificate_id: Option<String>,
     pub load_balancing: Option<String>,
-    pub topology_type: Option<String>,
     pub waf_enabled: Option<bool>,
     pub waf_mode: Option<String>,
     pub enabled: Option<bool>,
@@ -165,7 +162,6 @@ fn route_to_response(
         load_balancing: route.load_balancing.as_str().to_string(),
         waf_enabled: route.waf_enabled,
         waf_mode: route.waf_mode.as_str().to_string(),
-        topology_type: route.topology_type.as_str().to_string(),
         enabled: route.enabled,
         force_https: route.force_https,
         redirect_hostname: route.redirect_hostname.clone(),
@@ -236,13 +232,6 @@ pub async fn create_route(
         .parse::<lorica_config::models::LoadBalancing>()
         .map_err(ApiError::BadRequest)?;
 
-    let topo = body
-        .topology_type
-        .as_deref()
-        .unwrap_or("standard")
-        .parse::<lorica_config::models::TopologyType>()
-        .map_err(ApiError::BadRequest)?;
-
     let waf_mode = body
         .waf_mode
         .as_deref()
@@ -259,7 +248,6 @@ pub async fn create_route(
         load_balancing: lb,
         waf_enabled: body.waf_enabled.unwrap_or(false),
         waf_mode,
-        topology_type: topo,
         enabled: true,
         force_https: body.force_https.unwrap_or(false),
         redirect_hostname: body.redirect_hostname,
@@ -355,11 +343,6 @@ pub async fn update_route(
     if let Some(lb) = body.load_balancing {
         route.load_balancing = lb
             .parse::<lorica_config::models::LoadBalancing>()
-            .map_err(ApiError::BadRequest)?;
-    }
-    if let Some(topo) = body.topology_type {
-        route.topology_type = topo
-            .parse::<lorica_config::models::TopologyType>()
             .map_err(ApiError::BadRequest)?;
     }
     if let Some(waf_enabled) = body.waf_enabled {
